Correct links in footer nav

--- a/source/components/footer/footer.pug
+++ b/source/components/footer/footer.pug
@@ -13,19 +13,19 @@ footer.footer
                     items: [
                         { 
                             text: 'Мои работы', 
-                            link: '#works'
+                            link: 'portfolio.html'
                         },
                         { 
                             text: 'Обо мне', 
-                            link: '#about' 
+                            link: 'about.html' 
                         },
                         { 
                             text: 'Блог', 
-                            link: '#blog' 
+                            link: 'blog.html' 
                         },
                         { 
                             text: 'Авторизация', 
-                            link: '#auth' 
+                            link: '/' 
                         }
                     ]
                 })
