Animated background for the inside pages

--- a/source/scss/blocks/page-blog.scss
+++ b/source/scss/blocks/page-blog.scss
@@ -43,6 +43,11 @@
 
         &__header {
             height: 410px;
+
+            .page-header__bg-video {
+                top: auto;
+                bottom: -37%;
+            }
         }
 
         &__anchor-link {
