--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -15,13 +15,11 @@
     }
 
     &__bg-video {
-        width: 2000px;
-        height: 1100px;
+        width: 110%;
         position: absolute;
-        top: 50%;
+        top: 0;
         left: 50%;
-        transform: translate(-50%, -50%);
-        transition: margin-top 100ms;
+        transform: translateX(-50%);
     }
 
     &__bg-user {
@@ -65,6 +63,12 @@
             top: 100vh;
             bottom: auto;
             margin-top: -840px;
+        }
+
+        &__bg-video {
+            min-width: 100%;
+            width: auto;
+            height: 84vh;
         }
 
         &__bg-user {
