--- a/source/pages/about/index.pug
+++ b/source/pages/about/index.pug
@@ -37,7 +37,7 @@ block content
 
             p.user__text.text.text_color_white Личный сайт веб разработчика
 
-            button(type=`button` class=`page-header__anchor-link btn-arrow`)
+            button(type=`button` data-toggle=`anchor-link` data-target=`.about` class=`page-header__anchor-link btn-arrow`)
                 svg(class=`btn-arrow__icon` viewBox=svgArrowDown.viewBox): use(xlink:href=svgArrowDown.symbol)
             
     .ribbon.ribbon_theme_striped
