--- a/source/pages/blog/index.pug
+++ b/source/pages/blog/index.pug
@@ -32,7 +32,7 @@ block content
 
                 p.user__text.text.text_color_white Статьи, которые я написал
 
-                button(type=`button` class=`page-header__anchor-link page-blog__anchor-link btn-arrow`)
+                button(type=`button` data-toggle=`anchor-link` data-target=`.blog` class=`page-header__anchor-link page-blog__anchor-link btn-arrow`)
                     svg(class=`btn-arrow__icon` viewBox=svgArrowDown.viewBox): use(xlink:href=svgArrowDown.symbol)
 
         .ribbon.page-blog__ribbon
