--- a/source/pages/portfolio/index.pug
+++ b/source/pages/portfolio/index.pug
@@ -35,7 +35,7 @@ block content
 
                 p.user__text.text.text_color_white Личный сайт веб разработчика
 
-                button(type=`button` class=`page-header__anchor-link btn-arrow`)
+                button(data-toggle=`anchor-link` data-target=`.slider-works` type=`button` class=`page-header__anchor-link btn-arrow`)
                     svg(class=`btn-arrow__icon` viewBox=svgArrowDown.viewBox): use(xlink:href=svgArrowDown.symbol)
         
         .ribbon.ribbon_theme_dark.page-works__ribbon
@@ -113,5 +113,5 @@ block content
                             button(type=`submit` class=`form__btn btn btn_color_blue text text_color_white`) Отправить
                             button(type=`reset` class=`form__btn btn btn_color_transparent text text_color_white`) Очистить
 
-                button(type=`button` class=`page-works__anchor-to-top btn-arrow`)
+                button(type=`button` data-toggle=`anchor-link` data-target=`.page-works` class=`page-works__anchor-to-top btn-arrow`)
                     svg(class=`btn-arrow__icon` viewBox=svgArrowUp.viewBox): use(xlink:href=svgArrowUp.symbol)
