--- a/source/scss/blocks/page-welcome.scss
+++ b/source/scss/blocks/page-welcome.scss
@@ -10,7 +10,7 @@
 
     &__bg-media {
         position: absolute;
-        bottom: 10%;
+        top: 0;
         left: -5%;
         width: 110%;
     }
