--- a/source/pages/blog/index.pug
+++ b/source/pages/blog/index.pug
@@ -1,5 +1,6 @@
 extends ./../layout
 
+include ./../../mixins/menu
 include ./../../mixins/social
 include ./../../mixins/nav
 
@@ -7,7 +8,6 @@ block title
     | Blog page
     
 block content
-
     //- SVG
     - let svgArrowDown = require(`./../../images/icons/portf_arrow_down.svg`);
     - let svgRibbonLeft = require(`./../../images/icons/about_bg_left.svg`);
@@ -81,3 +81,25 @@ block content
                         .article__content
                             p.article__text.text Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                             p.article__text.text Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+
+block bottom
+    //- Menu
+    +menu([
+        { 
+            text: 'Мои работы', 
+            link: 'portfolio.html'
+        },
+        { 
+            text: 'Блог', 
+            link: 'blog.html',
+            active: true
+        },
+        { 
+            text: 'Обо мне', 
+            link: 'about.html'
+        },
+        { 
+            text: 'Авторизация', 
+            link: '/' 
+        }
+    ])
