Side menu for blog

--- a/source/scss/blocks/page-welcome.scss
+++ b/source/scss/blocks/page-welcome.scss
@@ -125,6 +125,7 @@
         &__bg-media {
             min-width: 110%;
             min-height: 80vh;
+            width: auto;
             top: 0;
             bottom: auto;
         }
