--- a/source/pages/layout.pug
+++ b/source/pages/layout.pug
@@ -8,6 +8,10 @@ html
             block title
     body
         .page
+            button(type=`button` class=`menu__toggler page__hamburger hamburger`)
+                span.hamburger__wrapper
+                    span.hamburger__inner
+
             +social({
                 className: `page__social social_xs-size_small`,
                 items: [
