--- a/source/scss/blocks/page-blog.scss
+++ b/source/scss/blocks/page-blog.scss
@@ -48,10 +48,10 @@
                 top: auto;
                 bottom: -37%;
             }
-        }
 
-        &__anchor-link {
-            display: none;
+            .page-header__anchor-link {
+                display: none;
+            }
         }
     }
 }
