--- a/source/scss/blocks/page-welcome.scss
+++ b/source/scss/blocks/page-welcome.scss
@@ -34,6 +34,10 @@
         left: 50%;
         margin-left: -190px;
         z-index: 2;
+
+        .nav__link {
+            padding: 0;
+        }
     }
 
     &__sign-in {
