--- a/source/pages/index/index.pug
+++ b/source/pages/index/index.pug
@@ -15,7 +15,7 @@ block content
 
         .page-welcome__sign-in
             button(type=`button` class=`flip-panel__front-toggler btn btn_w_100 btn_border_white btn_hover-bg_blue btn_xs-size_small`)
-                span.text.text_color_white.text_weight_500 Авторизоваться
+                span.btn__text.text.text_color_white.text_weight_500 Авторизоваться
 
         .page-welcome__flip-panel.flip-panel
             .flip-panel__side.flip-panel__side_side_front
@@ -53,19 +53,19 @@ block content
                                 text: `Мои работы`, 
                                 link: `portfolio.html`,
                                 itemClass: `nav__item_style_button btn btn_color_blue`,
-                                linkClass: `nav__link text text_color_white text_weight_500`
+                                linkClass: `nav__link btn__text text text_weight_500`
                             },
                             { 
                                 text: `Обо мне`, 
                                 link: `about.html`,
                                 itemClass: `nav__item_style_button btn btn_color_blue`,
-                                linkClass: `nav__link text text_color_white text_weight_500`
+                                linkClass: `nav__link btn__text text text_weight_500`
                             },
                             { 
                                 text: `Блог`, 
                                 link: `blog.html`,
                                 itemClass: `nav__item_style_button btn btn_color_blue`,
-                                linkClass: `nav__link text text_color_white text_weight_500`
+                                linkClass: `nav__link btn__text text text_weight_500`
                             }
                         ]
                     })
@@ -112,13 +112,13 @@ block content
                                 text: `На главную`, 
                                 link: `#welcome-backflip`,
                                 itemClass: `nav__item_style_button nav__item_width_50 nav__item_xs-width_auto btn btn_color_blue`,
-                                linkClass: `flip-panel__back-toggler nav__link text text_color_white text_weight_500`
+                                linkClass: `flip-panel__back-toggler nav__link btn__text text text_weight_500`
                             },
                             { 
                                 text: `Войти`, 
                                 link: `#submit`,
                                 itemClass: `nav__item_style_button nav__item_width_50 nav__item_xs-width_auto btn btn_color_blue`,
-                                linkClass: `nav__link text text_color_white text_weight_500`
+                                linkClass: `nav__link btn__text text text_weight_500`
                             }
                         ]
                     })
