--- a/source/scss/_mixins.scss
+++ b/source/scss/_mixins.scss
@@ -54,3 +54,10 @@
         @content;
     }
 }
+
+@mixin synch-margin($margin) {
+    top: $margin;
+    right: $margin;
+    bottom: $margin;
+    left: $margin;
+}
