--- a/source/scss/fonts.scss
+++ b/source/scss/fonts.scss
@@ -1,5 +1,37 @@
 @font-face {
     font-family: 'Sansus Webissimo';
-    src: url('../fonts/SansusWebissimo.woff') format('woff'),
+    src: url('./../fonts/SansusWebissimo.woff') format('woff'),
         url('../fonts/SansusWebissimo.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'icomoon';
+    src: url('./../fonts/icomoon.ttf?240bdv') format('truetype'),
+        url('./../fonts/icomoon.woff?240bdv') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+[class^="icomoon-icon-"],
+[class*=" icomoon-icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: 400;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icomoon-icon-portf-arrow-up::before {
+    content: "\e900";
+}
+
+.icomoon-icon-portf-arrow-down::before {
+    content: "\e901";
 }
