--- a/source/pages/layout.pug
+++ b/source/pages/layout.pug
@@ -7,6 +7,8 @@ html
         title
             block title
     body
+        include ../components/preloader/preloader
+
         .page
             button(type=`button` class=`menu__toggler page__hamburger hamburger`)
                 span.hamburger__wrapper
